--- a/index.html
+++ b/index.html
@@ -24,27 +24,36 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Experiences</a>
+                        <a class="nav-link" href="#experiences">Experiences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Education</a>
+                        <a class="nav-link" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Interests</a>
+                        <a class="nav-link" href="#interest">Interests</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Award</a>
+                        <a class="nav-link" href="#award">Award</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+     <!-- ABOUT  -->
+     <div id="about" class="bg-pink">
+        <h1 class="title">About</h1>
+        <div class="about-detail">
+            <img src="images/foto profil.jpg" width="400" />
+            <div class="about-description">a Bachelor of Education and has experience in teaching, administration, and social media. As a teacher, experienced in creating lesson plans, delivering lessons, create media for class, make a report, and managing a classroom. As an administrator, experienced managing educational programs, overseeing budgets, and communicating with stakeholders. In terms of social media, experienced managing diverse social media accounts, creating content, and engaging with followers. Currently working as a coding techer for kids in Educourse.id</div>
+        </div>
+    </div>
 
     <!-- COLUMN  -->
     <div class="container-fluid text-center">
