--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
     <!-- COLUMN  -->
     <div class="container-fluid text-center">
+        <div class="row1">
+            <div class= "color">
+                Experiences
+            </div>
+        </div>
         <div class="row">
             <div class="col bg-primary">
                 Column
