update html experiences

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <h1 class="title">About</h1>
         <div class="about-detail">
             <img src="images/foto profil.jpg" width="400" />
-            <div class="about-description">a Bachelor of Education and has experience in teaching, administration, and social media. As a teacher, experienced in creating lesson plans, delivering lessons, create media for class, make a report, and managing a classroom. As an administrator, experienced managing educational programs, overseeing budgets, and communicating with stakeholders. In terms of social media, experienced managing diverse social media accounts, creating content, and engaging with followers. Currently working as a coding techer for kids in Educourse.id</div>
+            <div class="about-description">a Bachelor of Education and has experience in teaching, administration, and social media. As a teacher, experienced in creating lesson plans, delivering lessons, create media for class, make a report, and managing a classroom. As an administrator, experienced managing educational programs, overseeing budgets, and communicating with stakeholders. In terms of social media, experienced managing diverse social media accounts, creating content, and engaging with followers. Currently working as a coding teacher for kids in Educourse.id</div>
         </div>
     </div>
 
-    <!-- COLUMN  -->
+    <!-- Experiences  -->
     <div class="container-fluid text-center">
         <div class="row1">
             <div class= "color">
@@ -64,16 +64,20 @@
         </div>
         <div class="row">
             <div class="col bg-primary">
-                Column
+                <h1>TKIT Daarul Fikri</h1>
+                <p>Bekerja sebagai guru TK B, berpengalaman dalam perencanaan pembelajaran, pembuatan media pembelajaran, dan pembuatan laporan hasil belajar peserta didik</p>
             </div>
             <div class="col bg-success">
-                Column
+                <h1>Directorate of International Affairs, Post Graduate School Universitas Pendidikan Indonesia</h1>
+                <p>Bekerja sebagai Staff Email dan Administrasi. Berpengalaman dalam pengelolaan data administratif untuk mahasiswa asing.</p>
             </div>
             <div class="col bg-warning">
-                Column
+                <h1>TK Negeri Centeh</h1>
+                <p>Bekerja sebagai Tenaga Administrasi Sekolah. Berpengalaman dalam mengelola data siswa dan guru, manajemen sosial media dan editing video, serta mengelola laporan keuangan sekolah melalui sistem.</p>
             </div>
             <div class="col bg-danger">
-                Column
+                <h1>Educourse.id</h1>
+                <p>Bekerja sebagai coding teacher for kids. Berpengalaman dalam membuat animasi menggunakan scratch, tynker, dan menguasai robot nxt, microbit, luxrobo, dan arduino. </p>
             </div>
         </div>
     </div>
