--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- CSS BOOTSTRAP  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <!-- CSS CUSTOM BUATAN SENDIRI  -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -45,6 +45,7 @@
             </div>
         </div>
     </nav>
+    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
 
      <!-- ABOUT  -->
      <div id="about" class="bg-pink">
@@ -64,28 +65,41 @@
         </div>
         <div class="row">
             <div class="col bg-primary">
-                <h1>TKIT Daarul Fikri</h1>
+                TKIT Daarul Fikri
                 <p>Bekerja sebagai guru TK B, berpengalaman dalam perencanaan pembelajaran, pembuatan media pembelajaran, dan pembuatan laporan hasil belajar peserta didik</p>
             </div>
             <div class="col bg-success">
-                <h1>Directorate of International Affairs, Post Graduate School Universitas Pendidikan Indonesia</h1>
+                Directorate of International Affairs, Post Graduate School Universitas Pendidikan Indonesia
                 <p>Bekerja sebagai Staff Email dan Administrasi. Berpengalaman dalam pengelolaan data administratif untuk mahasiswa asing.</p>
             </div>
             <div class="col bg-warning">
-                <h1>TK Negeri Centeh</h1>
+                TK Negeri Centeh
                 <p>Bekerja sebagai Tenaga Administrasi Sekolah. Berpengalaman dalam mengelola data siswa dan guru, manajemen sosial media dan editing video, serta mengelola laporan keuangan sekolah melalui sistem.</p>
             </div>
             <div class="col bg-danger">
-                <h1>Educourse.id</h1>
+                Educourse.id
                 <p>Bekerja sebagai coding teacher for kids. Berpengalaman dalam membuat animasi menggunakan scratch, tynker, dan menguasai robot nxt, microbit, luxrobo, dan arduino. </p>
             </div>
         </div>
     </div>
-
+    <!--Education-->
+    <div class="container-fluid text-center">
+        <div class="row2">
+            <div class="color">
+                Education
+            </div>
+        </div>
+        <div class="row">
+            <div class="col bg-danger">
+                SD Negeri Soka
+                <p>2005-2011</p>
+            </div>
+        </div>
+    </div>
     <!-- JS BOOTSTRAP  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JS CUSTOM BUATAN SENDIRI  -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
