--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap">
     <title>Final Project Batch 7</title>
     <!-- CSS BOOTSTRAP  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
@@ -45,7 +46,7 @@
             </div>
         </div>
     </nav>
-    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    <button onclick="toggleDarkMode()">Dark Mode</button>
 
      <!-- ABOUT  -->
      <div id="about" class="bg-pink">
@@ -93,6 +94,44 @@
             <div class="col bg-danger">
                 SD Negeri Soka
                 <p>2005-2011</p>
+            </div>
+            <div class="col bg-primary">
+                SMP Negeri 20 Bandung
+                <p>2011-2014</p>
+            </div>
+            <div class="col bg-success">
+                SMA Negeri 20 Bandung
+                <p>2014-2017</p>
+            </div>
+            <div class="col bg-warning">
+                Universitas Pendidikan Indonesia
+                <p>2017-2022</p>
+            </div>
+        </div>
+    </div>
+     <!--Skills-->
+     <div class="container-fluid text-center">
+        <div class="row2">
+            <div class="color">
+                Skills
+            </div>
+        </div>
+        <div class="row">
+            <div class="col bg-danger">
+                Google Workspaces
+                <p>Docs, Slides, Spreadsheet, Sites, etc.</p>
+            </div>
+            <div class="col bg-primary">
+                Foreign Language
+                <p>English and Korean</p>
+            </div>
+            <div class="col bg-success">
+                Microsoft Office
+                <p>Word, Presentation, Excel</p>
+            </div>
+            <div class="col bg-warning">
+                Design and Edit Video
+                <p>Canva, Kinemaster, Capcut</p>
             </div>
         </div>
     </div>
