update semua category

--- a/index.html
+++ b/index.html
@@ -135,6 +135,37 @@
             </div>
         </div>
     </div>
+     <!--Interests-->
+     <div class="container-fluid text-center">
+        <div class="row2">
+            <div class="color">
+                Interests
+            </div>
+        </div>
+        <div class="row">
+            <div class="col bg-primary">
+                Digital Stuff
+                <p>Coding, Robotics, Designing</p>
+            </div>
+        </div>
+    </div>
+     <!--Award-->
+     <div class="container-fluid text-center">
+        <div class="row2">
+            <div class="color">
+                Award
+            </div>
+        </div>
+        <div class="row">
+            <div class="col bg-primary">
+                Finalis Lomba Cipta Gerak dan Lagu
+                <p>Song title: Tubuhku
+                    Lyrics by: Intan Kusumadewi
+                    Music by : Faisal Khairul Anam
+                </p>
+            </div>
+        </div>
+    </div>
     <!-- JS BOOTSTRAP  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JS CUSTOM BUATAN SENDIRI  -->
