--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col bg-danger">
+            <div class="col bg-pink">
                 Google Workspaces
                 <p>Docs, Slides, Spreadsheet, Sites, etc.</p>
             </div>
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col bg-primary">
+            <div class="col bg-purple">
                 Digital Stuff
                 <p>Coding, Robotics, Designing</p>
             </div>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col bg-primary">
+            <div class="col bg-pink">
                 Finalis Lomba Cipta Gerak dan Lagu
                 <p>Song title: Tubuhku
                     Lyrics by: Intan Kusumadewi
